# drf-learning-platform

./: .env.exsample  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  serializer.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_course_auth_lesson_auth.py
users/: models.py  permissions.py  serializer.py  urls.py  views.py
users/fixtures/: payments.json
users/migrations/: 0001_initial.py  0002_payment.py
